# cmake_minimum_required(VERSION 3.2)
# # include($ENV{DEVKITPRO}/cmake/NDS.cmake )
# set(CMAKE_TOOLCHAIN_FILE $ENV{DEVKITPRO}/cmake/NDS.cmake)
# INCLUDE_DIRECTORIES($ENV{DEVKITPRO}/libnds/include)

# set(socklen_t uint32_t)


# project(HttpsTest C CXX)


# # add general scripts
# add_executable(HttpsTest source/main.c)
     
# link_directories(libs)
# # add_library(libwolfssl STATIC libs/libwolfssl.a)

# target_link_libraries(HttpsTest wolfssl)
# # add_subdirectory(libs/wolfssl-5.6.6)
# # target_link_libraries(HttpsTest glm::glm)

    

#     # wut_create_rpx(TimeGame)
    
#     # install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}.rpx"
#     # DESTINATION "${CMAKE_INSTALL_PREFIX}/WiiU")
